e2e/testdata/gnp-hep-applyonforward-block-database/policy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: forward-firewall-deny-database
spec:
  selector: role == 'forward-firewall'
  applyOnForward: true
  types:
    - Ingress
    - Egress
  ingress:
    - action: Deny
      destination:
        selector: app == 'database'
    - action: Allow
  egress:
    - action: Deny
      destination:
        selector: app == 'database'
    - action: Allow
